--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
         if: ${{ !env.ACT && !startsWith(runner.name, 'Act') }}
         uses: actions/upload-artifact@v4
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           name: coverage-report
           path: coverage.xml
           if-no-files-found: error
