--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -107,7 +107,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/download-artifact@v4
         with:
-          name: lazy-core-dist
+          name: lazy-flask-dist
           path: dist
 
       - name: Publish to PyPI (Trusted Publisher)
