--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install flask==${{ matrix.flask-version }}
           poetry install --no-interaction
+          poetry run pip install -U "flask==${{ matrix.flask-version }}"
 
       - name: Run pre-commit
         uses: pre-commit/action@v3.0.1
@@ -97,7 +97,7 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/lazy-core/
+      url: https://pypi.org/p/lazy-flask/
     permissions:
       id-token: write
       contents: read
